# agentflow

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.agents/skills/code-check/: SKILL.md
.agents/skills/code-discovery/: SKILL.md
.agents/skills/code-format/: SKILL.md
.agents/skills/code-test/: SKILL.md
.agents/skills/feature-discovery/: SKILL.md
.agents/skills/feature-status/: SKILL.md
.config/: nextest.toml
.github/: pre-commit-config.yaml
.github/workflows/: ci.yml  codeql.yml
crates/agentflow/: Cargo.toml
crates/agentflow-tracing/: Cargo.toml
crates/agentflow-ui/: Cargo.toml
crates/agentsync/: Cargo.toml
crates/agentsync-tracing/: Cargo.toml
crates/agentsync-ui/: Cargo.toml
crates/agentsync/src/: main.rs
docs/: README.md
docs/code/: apps-cli.md  errors-handling.md  errors-reporting.md  logging-errors.md  logging.md  rust-crate.md  rust-documentation.md  rust-modules-members.md  rust-modules.md  rust-workspace.md  test-organization.md
tests/: Cargo.toml
tests/src/: ctx.rs  fixtures.rs  helpers.rs  lib.rs  testdata.rs
tests/src/helpers/: git.rs
