[workspace]
members = [
    "crates/agentflow",
    "crates/agentflow-tracing",
    "crates/agentflow-ui",
    "tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
fs-err = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.49.0", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tracing = "0.1"

