[package]
name = "tests"
edition.workspace = true
version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "testlib"

[dependencies]
anyhow = "1.0.102"
backon = { version = "1.6.0", default-features = false, features = ["tokio-sleep"] }
color-backtrace = { version = "0.7.2", default-features = false, features = ["use-btparse-crate"] }
ctor = "0.6.3"
dotenvy = "0.15.7"
fs-err.workspace = true
futures = "0.3.32"
indoc = "2.0.7"
object_store = "0.13.1"
pretty_assertions = "1.4.1"
rand = "0.10.0"
reqwest = "0.13.2"
serde.workspace = true
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { workspace = true, features = ["process"] }
toml = "1.0.3"
tonic = "0.14.5"
tracing.workspace = true
url = "2.5.8"

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build"] }
